# tasks-timer

./: README.md  db.sqlite3  manage.py  pyproject.toml
tasks/: forms.py  models.py  views.py
tasks/migrations/: 0001_initial.py
tasks/templates/tasks/: home.html
tasks/templatetags/: filters.py
tasks_timer/: asgi.py  settings.py  urls.py  wsgi.py
